# NetworksCourse

./: .gitignore  README.md  pyproject.toml
dps/: main.py  scheduler.py
dps/dps_env/: dps_env.py
dps/network/: bandwidth_test.py  main.py  monitor.py  networ_setup.py  network_setup_no_namespaces-o.py  network_setup_no_namespaces.py  server.py  shared_config.py  simulator.py  test_connectivity.py  traffic_generator.py
dps/network2.0/: network_worker.py
dps/network2.0/api/: api.py  start-api.sh  stop-api.sh
dps/policies/: __init__.py  base.py  constant_policy.py  network_aware_policy.py  random_policy.py  transition_policy.py
dps/training/: allreduce.py
dps/utils/: config.py  logs.py  model_utils.py  precision.py  system.py
scripts/: run_dps.sh  run_dps_scratch.sh  run_dps_scratch_network_aware.sh
spike/: demo.py  demo.sh
static_network_files/: 1.csv  flow_data_20250403_201337.csv
